# AceleraSEO

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.demo.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/dashboard/: .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json
apps/engine/: .dockerignore  Dockerfile  pyproject.toml
apps/engine/src/aceleraseo/application/: act.py  crawl.py  decide.py  discover.py  learn.py  sense.py
apps/engine/src/aceleraseo/domain/: audit.py  autonomy.py  classify.py  learn.py  models.py  ports.py  strategy.py
apps/engine/src/aceleraseo/infrastructure/: config.py  settings_store.py
apps/engine/src/aceleraseo/infrastructure/google/: ga4_adapter.py  gsc_adapter.py  oauth.py  url_inspection_adapter.py
apps/engine/src/aceleraseo/infrastructure/llm/: anthropic_adapter.py  discoverer.py  factory.py  null_llm.py
apps/engine/src/aceleraseo/infrastructure/persistence/: db.py  models.py  proposals.py  repository.py
apps/engine/src/aceleraseo/infrastructure/providers/: crawler.py  dataforseo.py  indexnow.py  rendering_crawler.py
apps/engine/src/aceleraseo/interfaces/api/: app.py
apps/engine/tests/: test_act.py  test_audit.py  test_autonomy.py  test_classify.py  test_crawl.py  test_dataforseo.py  test_decide.py  test_discover.py  test_indexnow.py  test_learn.py  test_learn_usecase.py  test_llm_factory.py  test_rendering_crawler.py  test_sense.py  test_settings_store.py  test_strategy.py
docs/: API-LIMITS.md  ARCHITECTURE.md  ROADMAP.md  SESSION-HANDOFF.md
(+17 files in other folders)
