[project]
name = "aceleraseo-engine"
version = "0.0.1"
description = "AceleraSEO — autonomous SEO strategy engine (Sense/Decide/Act/Learn)"
readme = "../../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
